inner-loop/kubernetes/spring-boot/tilt/config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: demo
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1001
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.2"
              memory: "1Gi"
            limits:
              memory: "1Gi"
