inner-loop/kubernetes/spring-boot/tilt/config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
